--- a/web/_template.xhtml
+++ b/web/_template.xhtml
@@ -6,25 +6,30 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="./css/default.css"/>
-        <h:outputStylesheet name="./css/cssLayout.css"/>
-        <h:outputStylesheet name="./css/style.css"/>
+        <h:outputStylesheet name="css/default.css"/>
+        <h:outputStylesheet name="css/cssLayout.css"/>
+        <h:outputStylesheet name="css/style.css"/>
         <title>Facelets Template</title>
     </h:head>
 
     <h:body>
 
-        <div id="top">
+        <header id="top">
             <ui:insert name="top">Top</ui:insert>
-        </div>
+        </header>
 
-        <div id="content" class="center_content">
+        <main id="content" class="center_content">
             <ui:insert name="content">Content</ui:insert>
-        </div>
+        </main>
 
-        <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
-        </div>
+        <footer id="bottom">
+            <ui:insert name="bottom">
+                <div>
+                    <h3>&copy; Maratona de Programação</h3>
+                    <h4>Vitor Pereira</h4>
+                </div>
+            </ui:insert>
+        </footer>
 
     </h:body>
 
