--- a/web/error/999.xhtml
+++ b/web/error/999.xhtml
@@ -1,20 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./_template-usuario.xhtml">
-
-   
-
-    <ui:define name="left">
-        <ul>
-            <li>meu lateral</li>
-            <li>Foo</li>
-        </ul>
-    </ui:define>
+                template="./../_template.xhtml">
 
     <ui:define name="content">
-        Oi eu sou o goku
+        <div class="error">    
+            <h1>Um erro inesperado Ocorreu!</h1>
+       </div>
     </ui:define>
 
-   
 </ui:composition>
