--- a/web/sistema/_template-usuario.xhtml
+++ b/web/sistema/_template-usuario.xhtml
@@ -6,7 +6,7 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="./../resources/css/default.css"/>
+        <h:outputStylesheet name="./resources/css/default.css"/>
         <h:outputStylesheet name="./../resources/css/cssLayout.css"/>
         <title>Facelets Template</title>
     </h:head>
