--- a/web/sistema/usuario.xhtml
+++ b/web/sistema/usuario.xhtml
@@ -35,7 +35,7 @@
                         update=":form:messages" />
                 <f:facet name="caption">Usuarios Cadastradas</f:facet>
                 <pf:column headerText="Nome" sortBy="#{u.nome}"
-                           filterBy="#{c.nome}" 
+                           filterBy="#{u.nome}" 
                            filterFunction="#{usuarioBean.consultarPorNome}">
                     <pf:cellEditor>
                         <f:facet name="output">
@@ -46,21 +46,21 @@
                         </f:facet>
                     </pf:cellEditor>
                 </pf:column>
-                <pf:column headerText="Banco" sortBy="#{c.login}">
+                <pf:column headerText="Login" sortBy="#{c.login}">
                     <pf:cellEditor>
                         <f:facet name="output">
-                            <h:outputText value="#{c.login}"/>
+                            <h:outputText value="#{u.login}"/>
                         </f:facet>
                         <f:facet name="input">
-                            <h:inputText value="#{c.login}"/>
+                            <h:inputText value="#{u.login}"/>
                         </f:facet>
                     </pf:cellEditor>
                 </pf:column>
-                <pf:column headerText="Agência">
-                    <h:outputText value="#{c.senha}"/>
+                <pf:column headerText="Senha">
+                    <h:outputText value="#{u.senha}"/>
                 </pf:column>
-                <pf:column headerText="Número">
-                    <h:outputText value="#{c .nivel}"/>
+                <pf:column headerText="Nivel">
+                    <h:outputText value="#{u .nivel}"/>
                 </pf:column>
                 <pf:column headerText="Editar">
                     <pf:rowEditor/>
@@ -69,7 +69,7 @@
                     <pf:commandButton ajax="true" update="@all" icon="ui-icon-trash" alt="Excluir" title="Excluir" action="#{maratonaBean.excluir(c)}" onclick="return confirm('Confirma a exclusao?')"/>
                 </pf:column>
             </pf:dataTable>
-            <pf:commandButton ajax="false" icon="ui-icon-circle-plus" action="#{contaBean.paginaNovaConta}"/>
+            <pf:commandButton ajax="false" icon="ui-icon-circle-plus" action="#{maratonaBean.paginaNovoUsuario}"/>
         </h:form>
     </ui:define>
 
