--- a/web/sistema/usuario.xhtml
+++ b/web/sistema/usuario.xhtml
@@ -1,37 +1,28 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./_template-usuario.xhtml"
+                template="./_template_sistema.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:pf="http://primefaces.org/ui">
 
-   
-
-    <ui:define name="left">
-        <ul>
-            <li>meu lateral</li>
-            <li>Foo</li>
-        </ul>
-    </ui:define>
-
     <ui:define name="content">
-        <h1>Ola Usuario</h1>
+        <h2>Ola Usuario</h2>
         
         <h:form id="form">
             <pf:growl id="messages" showDetail="true" />
-            <pf:dataTable value="#{maratonaBean.usuarios}" var="u"
+            <pf:dataTable value="#{usuarioBean.usuarios}" var="u"
                           paginator="true" rows="2"
                           rowsPerPageTemplate="2, 5, 10"
                           paginatorPosition="top"
                           sortMode="multiple" 
-                          filteredValue="#{maratonaBean.usuariosFiltrados}"
+                          filteredValue="#{usuarioBean.usuariosFiltrados}"
                           editable="true" >
                 <pf:ajax event="rowEdit"
-                        listener="#{maratonaBean.onEdit}"
+                        listener="#{usuarioBean.onEdit}"
                         update=":form:messages" />
                 <pf:ajax event="rowEditCancel"
-                        listener="#{maratonaBean.onCancel}"
+                        listener="#{usuarioBean.onCancel}"
                         update=":form:messages" />
                 <f:facet name="caption">Usuarios Cadastradas</f:facet>
                 <pf:column headerText="Nome" sortBy="#{u.nome}"
@@ -46,7 +37,7 @@
                         </f:facet>
                     </pf:cellEditor>
                 </pf:column>
-                <pf:column headerText="Login" sortBy="#{c.login}">
+                <pf:column headerText="Login" sortBy="#{u.login}">
                     <pf:cellEditor>
                         <f:facet name="output">
                             <h:outputText value="#{u.login}"/>
@@ -60,16 +51,16 @@
                     <h:outputText value="#{u.senha}"/>
                 </pf:column>
                 <pf:column headerText="Nivel">
-                    <h:outputText value="#{u .nivel}"/>
+                    <h:outputText value="#{u.nivel}"/>
                 </pf:column>
                 <pf:column headerText="Editar">
                     <pf:rowEditor/>
                 </pf:column>
                 <pf:column headerText="Excluir">
-                    <pf:commandButton ajax="true" update="@all" icon="ui-icon-trash" alt="Excluir" title="Excluir" action="#{maratonaBean.excluir(c)}" onclick="return confirm('Confirma a exclusao?')"/>
+                    <pf:commandButton ajax="true" update="@all" icon="ui-icon-trash" alt="Excluir" title="Excluir" action="#{usuarioBean.excluir(u)}" onclick="return confirm('Confirma a exclusao?')"/>
                 </pf:column>
             </pf:dataTable>
-            <pf:commandButton ajax="false" icon="ui-icon-circle-plus" action="#{maratonaBean.paginaNovoUsuario}"/>
+            <pf:commandButton ajax="false" icon="ui-icon-circle-plus" action="#{usuarioBean.paginaNovoUsuario}"/>
         </h:form>
     </ui:define>
 
