--- a/web/sistema/usuario_1.xhtml
+++ b/web/sistema/usuario_1.xhtml
@@ -33,7 +33,7 @@
                             <h:outputText value="#{u.nome}" style="text-align: left"/>
                         </f:facet>
                         <f:facet name="input">
-                            <pf:inputText value="#{u.nome}"/>
+                            <h:inputText value="#{u.nome}"/>
                         </f:facet>
                     </pf:cellEditor>
                 </pf:column>
@@ -43,7 +43,7 @@
                             <h:outputText value="#{u.login}"/>
                         </f:facet>
                         <f:facet name="input">
-                            <pf:inputText value="#{u.login}"/>
+                            <h:inputText value="#{u.login}"/>
                         </f:facet>
                     </pf:cellEditor>
                 </pf:column>
