--- a/web/sistema/usuario_novo.xhtml
+++ b/web/sistema/usuario_novo.xhtml
@@ -13,11 +13,11 @@
         <h:form>
             <h:panelGrid columns="2">
                 <pf:outputLabel value="Nome" for="nome"/>
-                <h:inputText value="#{usuarioBean.usuario.nome}" id="nome" required="true"/>
+                <pf:inputText value="#{usuarioBean.usuario.nome}" id="nome" required="true"/>
                 <pf:outputLabel value="Login" for="login"/>
-                <h:inputText value="#{usuarioBean.usuario.login}" id="login"/>
+                <pf:inputText value="#{usuarioBean.usuario.login}" id="login"/>
                 <pf:outputLabel value="Senha" for="senha"/>
-                <h:inputText value="#{usuarioBean.usuario.senha}" id="senha"/>
+                <pf:inputText value="#{usuarioBean.usuario.senha}" id="senha"/>
                 <pf:outputLabel value="Nivel" for="nivel"/>
                 <pf:selectOneMenu value="#{usuarioBean.usuario.nivel}" id="nivel">
                     <f:selectItems value="#{usuarioBean.niveis()}" />
